--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -20,7 +20,7 @@ a, body, span, div, h1,h2,h3,h4,h5,h6,p,button{
   
   .navbar{
     position: fixed!important;
-    background-color: #1d6613;
+    background-color: #294ef0;
     color: rgb(0,0,0);
     z-index: 300;
     width: 100%;
